tests/stmt/test-5.nbl
// no initializers
mut a;
mut b;

a = "assigned";

print(a); // works
print(b); // error
